# automation_pytest

./: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
src/operation/: button_operation.py
src/operation.egg-info/: PKG-INFO  SOURCES.txt
test/: conftest.py  test_button_operation.py
